# dingo

./: Cargo.toml  README.md  install.sh
src/: cli.rs  dns_types.rs  io.rs  main.rs  message.rs  parse.rs  util.rs
src/message/: header.rs  parser_utils.rs  question.rs  record.rs
