[package]
name = "dingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
ascii = "1.0.0"
bitvec = "1.0.0"
nom = "7.1.0"
pico-args = "0.4.2"
rand = "0.8.4"

[dev-dependencies]
# bytes = "1.1.0"
# dns-message-parser = "0.6.0"